5-service-and-networking/4-use-ingress-rules-to-expose-applications/src/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: frontend
    spec:
      containers:
      - image: alpine:latest
        name: alpine
        command:
        - /bin/sh
        - "-c"
        - "sleep 60m"
        resources: {}
status: {}
