5-service-and-networking/4-use-ingress-rules-to-expose-applications/src/svc.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: app.com
spec:
  rules:
  - host: web.app.com
    http:
      paths:
      - backend:
          service:
            name: frontend
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: admin.app.com
    http:
      paths:
      - backend:
          service:
            name: backend
            port:
              number: 9000
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
