5-service-and-networking/4-use-ingress-rules-to-expose-applications/src/be.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: default
spec:
  ipFamilyPolicy: PreferDualStack
  ports:
  - port: 9000
    targetPort: 80
    protocol: TCP
  selector:
    app: backend
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
