5-service-and-networking/4-use-ingress-rules-to-expose-applications/src/fe.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: default
spec:
  ipFamilyPolicy: PreferDualStack
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: frontend
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-backend
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: backend
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
